= vasputils changelog

== Master (for 0.0.3)

== Version 0.0.2 [2013-04-18] released
* Adjust to builtinextension-0.1.0.

== Version 0.0.1
* Change indent character from tab to two spaces.
* Rename textfilter to linesub
* Add bin/lineescapezsh
* Add bin/formcolumn
* Add -g option to bin/linesub

== Version 0.0.0
* Initial release.