@@ -17,7 +17,7 @@ op.on("-r"    , "--randomize" , "Randomize."){    OPTIONS[:random] = true}
 op.on("-o"    , "--overwrite"    , "Overwrite."){    OPTIONS[:overwrite] = true}
 op.parse!(ARGV)
 
-module TextFilter
+module Tefil
   def self.process_stream(in_io, out_io)
     in_io.each do |line|
       if OPTIONS[:sort]
@@ -34,5 +34,5 @@ OPTIONS[:overwrite] ||= false
 
 
 #pp OPTIONS[:overwrite]
-#TextFilter.run(ARGV, OPTIONS[:overwrite])
-TextFilter.run(ARGV, OPTIONS[:overwrite])
+#Tefil.run(ARGV, OPTIONS[:overwrite])
+Tefil.run(ARGV, OPTIONS[:overwrite])
