@@ -1,6 +1,9 @@
 = vasputils changelog
 
 == Master (for 0.0.3)
+* Rename TextFilter to Tefil
+* Add Tefil::ColumnFormer
+* Add -l(left alline) option to formcolumn command.
 
 == Version 0.0.2 [2013-04-18] released
 * Adjust to builtinextension-0.1.0.
